--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -67,8 +67,8 @@
 }
 
 .youtube {
-  color: red;
-  border-color: red;
+  color: #ff4141;
+  border-color: #ff4141;
   border-radius: 7px;
 }
 .live {
